add alineacion de objetivos
